[package]
name = "crond"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
cfg-if = "1.0.0"
clap = "4.5.1"
futures = "0.3.30"
homedir = "0.2.1"
serde = "1.0.196"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "json"] }
walkdir = "2.4.0"

[http]
check-revoke = false

